--- a/README.org
+++ b/README.org
@@ -16,6 +16,14 @@ contenido.
 
 ** Enero de 2021
 
+*** 26-Ene-21
++ [[https://dl.acm.org/doi/pdf/10.1145/3437992.3439910][Teaching algorithms and data structures with a proof assistant]]. ~ Tobias Nipkow. #ITP #IsabelleHOL
++ [[https://lmcs.episciences.org/7124/pdf][2-Adjoint equivalences in Homotopy Type Theory]]. ~ Daniel Carranza, Jonathan Chang, Krzysztof Kapulkin, Ryan Sandford. #ITP #LeanProver #HoTT
++ [[https://arxiv.org/abs/2101.10166][The Agda universal algebra library and Birkhoff's theorem in Martin-Löf dependent type theory]]. ~ William DeMeo. #ITP #Agda #Math
++ [[https://dl.acm.org/doi/pdf/10.1145/3437992.3439924][Formal verification of authenticated, append-only skip lists in Agda]]. ~ Victor Cacciari Miraldo, Harold Carr, Mark Moir, Lisandra Silva, Guy L. Steele Jr. #ITP #Agda
++ [[https://atcm.mathandtech.org/EP2020/invited/21810.pdf][A Haskell implementation of the Lyness-Moler’s numerical differentiation algorithm]]. ~ Weng Kin Ho, Chu Wei Lim. #Haskell #FunctionalProgramming #Math
++ [[https://cacm.acm.org/magazines/2021/2/250078-lets-not-dumb-down-the-history-of-computer-science/fulltext][Let's not dumb down the history of computer science]]. ~ Donald E. Knuth, Len Shustek. #CompSci
+
 *** 25-Ene-21
 + [[https://xenaproject.wordpress.com/2021/01/24/formalising-mathematics-workshop-1][Formalising mathematics: workshop 1]]. ~ Kevin Buzzard (@XenaProject). #ITP #LeanProver #Math
 
