Lecturas del 13-Feb-21

--- a/README.org
+++ b/README.org
@@ -10,7 +10,6 @@ contenido.
 * Contenido                                                             :TOC:
 - [[#lecturas-del-año-2021][Lecturas del año 2021]]
   - [[#febrero-de-2021][Febrero de 2021]]
-  - [[#12-feb-21][12-Feb-21]]
   - [[#enero-de-2021][Enero de 2021]]
 - [[#lecturas-anteriores][Lecturas anteriores]]
 
@@ -18,7 +17,14 @@ contenido.
 
 ** Febrero de 2021
 
-** 12-Feb-21
+*** 13-Feb-21
++ [[https://www.researchgate.net/profile/Christoph-Benzmueller/publication/349027173_Value-oriented_Legal_Argumentation_in_IsabelleHOL/links/601b90b5299bf1cc26a00e9a/Value-oriented-Legal-Argumentation-in-Isabelle-HOL.pdf][Value-oriented legal argumentation in Isabelle/HOL]]. ~ Christoph Benzmüller, David Fuenmayor. #ITP #IsabelleHOL
++ [[https://hal.inria.fr/hal-03136002/document][Unsolvability of the quintic formalized in dependent type theory]]. ~ Sophie Bernard, Cyril Cohen, Assia Mahboubi, Pierre-Yves Strub. #ITP #Coq #Math
++ [[https://tel.archives-ouvertes.fr/tel-03107626/document/][Machine-checked computer-aided mathematics]]. ~ Assia Mahboubi. #ITP #Coq #Math
++ [[https://academic.oup.com/logcom/advance-article/doi/10.1093/logcom/exab006/6129486][A study of continuous vector representations for theorem proving]]. ~ StanisŁaw PurgaŁ, Julian Parsert, Cezary Kaliszyk. #ATP #MachineLearning
++ [[https://www.quantamagazine.org/mathematician-solves-computer-science-conjecture-in-two-pages-20190725/][Decades-old computer science conjecture solved in two pages]]. ~ Erica Klarreich (@EricaKlarreich). #Math #CompSci
+
+*** 12-Feb-21
 + [[https://github.com/leanprover-community/mathlib/blob/72141fdc94feec6f394b95c9310687f517bb4d02/src/combinatorics/hall.lean][Hall's Marriage Theorem in Lean]]. ~ Alena Gusakov, Bhavik Mehta, Kyle Miller. #ITP #LeanProver #Math
 + [[https://github.com/leanprover-community/mathlib/blob/2f566202f1bbefee115b5b45b48a7127133309c7/src/data/real/liouville.lean][Liouville's theorem in Lean]]. ~ Jujian Zhang. #ITP #LeanProver #Math
 + [[https://github.com/leanprover-community/mathlib/blob/983cb905e2468a820d833263bd537686b549267a/archive/imo/imo1987_q1.lean][Formalization in Lean of IMO (International Mathematical Olympiads) 1987, Q1]]. ~ Yury Kudryashov. #ITP #LeanProver #Math
