--- a/README.org
+++ b/README.org
@@ -9,11 +9,20 @@ contenido.
 
 * Contenido                                                             :TOC:
 - [[#lecturas-del-año-2021][Lecturas del año 2021]]
+  - [[#marzo-de-2021][Marzo de 2021]]
   - [[#febrero-de-2021][Febrero de 2021]]
   - [[#enero-de-2021][Enero de 2021]]
 - [[#lecturas-anteriores][Lecturas anteriores]]
 
 * Lecturas del año 2021
+
+** Marzo de 2021
+
+*** 28-Feb-21
++ [[https://cs.nyu.edu/faculty/davise/papers/proof.pdf][Proof verification technology and elementary physics]]. ~ Ernest Davis. #FormalVerification #Physics
++ [[http://h2.jaguarpaw.co.uk/posts/how-i-use-dante/][How I use Dante]]. #Haskell #FunctionalProgramming #Emacs
+
+
 
 ** Febrero de 2021
 
