--- a/README.org
+++ b/README.org
@@ -18,6 +18,14 @@ contenido.
 
 ** Marzo de 2021
 
+*** 02-Mar-21
++ [[https://youtu.be/UnYrWuOzOlc][AI and Theorem Proving [Video]]]. ~ Josef Urban. #ATP #ITP #MachineLearning #AI
++ [[https://cmsa.fas.harvard.edu/wp-content/uploads/2021/01/Urbanslides.pdf][AI and Theorem Proving [Slides]]]. ~ Josef Urban. #ATP #ITP #MachineLearning #AI
++ [[https://youtu.be/Y0hpHm74FYs][Language modeling for mathematical reasoning [Video]]]. ~ Christian Szegedy. #Logic #Math #AI
++ [[https://cmsa.fas.harvard.edu/wp-content/uploads/2021/01/Language-modeling-for-Mathematical-Reasoning-.pdf ][Language modeling for mathematical reasoning [Slides]]]. ~ Christian Szegedy. #Logic #Math #AI
++ [[https://kowainik.github.io/posts/arrows-zoo][Arrows Zoo]]. ~ Veronika Romashkina (@vrom911), Dmitrii Kovanikov (@ChShersh). #Haskell #FunctionalProgramming
++ [[https://www.cs.utexas.edu/users/EWD/transcriptions/EWD10xx/EWD1011.html][Introducing my fall 1987 course on Mathematical Methodology]]. ~ Edsger W.Dijkstra. #Math
+
 *** 01-Mar-21
 + [[https://www.isa-afp.org/entries/Sunflowers.html][The sunflower lemma of Erdős and Rado (in Isabelle/HOL)]]. ~ René Thiemann. #ITP #IsabelleHOL #Math
 + [[http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.303.8201&rep=rep1&type=pdf][12² beautiful mathematical theorems with short proofs]]. ~ Jörg Neunhäuserer. #Math via @@lizardbill
